--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">[Your Site Name Here]</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Personal Website</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
@@ -83,8 +83,8 @@
           <hr class="divider my-4" />
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="text-faded text-black mb-5">[A brief introduction about me]</p>
-          <p class="text-italic font-weight-bold mb-5">[Current Job/Speciality, Quote, etc.]</a></p>
+          <p class="text-faded text-black mb-5">Hi, i'm from Indonesia</p>
+          <p class="text-italic font-weight-bold mb-5">A college student at Telkom University</a></p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
         </div>
       </div>
@@ -117,16 +117,16 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-code text-faded sr-icons"></i>
           <h3 class="text-white">Languages</h3>
-          <p class="text-faded no-margin">[C / C++, Python, C#]</p>
-          <p class="text-faded">[HTML5 (HTML/CSS/JS)]</p>
+          <p class="text-faded no-margin">C++, Python, Golang</p>
+          <p class="text-faded">HTML5 (HTML/CSS/JS)</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-file-code-o text-faded sr-icons"></i>
           <h3 class="text-white">Skills</h3>
-					<p class="text-faded">[Special Skills ex: Full Stack Developer]</p>
-          <p class="text-faded no-margin">[C# .NET Back end]</p>
-          <p class="text-faded">[HTML5 Front end]</p>
+					<p class="text-faded">Full Stack Developer</p>
+          <p class="text-faded no-margin">NodeJs Express Back end</p>
+          <p class="text-faded">HTML5 React Front end</p>
         </div>
       </div>
 
@@ -312,14 +312,14 @@
         </div>
         
         <div class="col-4 col-sm-4 col-lg-2 text-center">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/hanrocky-halim-b475b522a">
             <i class="fa fa-linkedin-square fa-4x sr-icons"></i>
           </a>
           <p><a href="#" class="text-blue">LinkedIn</a></p>
         </div>
         
         <div class="col-4 col-sm-4 col-lg-2 text-center">
-          <a href="#">
+          <a href="https://github.com/hanrockyhalim">
             <i class="fa fa-github-square fa-4x sr-icons"></i>
           </a>
           <p><a href="#" class="text-blue">GitHub</a></p>
